# rrpp-agent-bridge

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
config/openclaw/: AGENTS.md
docs/: DEPLOYMENT.md
docs/agent-guide/: ARCHITECTURE.md  DECISIONS.md  DELIVERY.md  ERRORS.md  KNOWLEDGE.md  PROJECT_BRIEF.md  README.md  SECURITY.md
rrpp_bridge/: action_executor.py  agent.py  agent_provider.py  audit.py  catalog.py  cli.py  config.py  db.py  delivery.py  executor.py  gmail_connector.py  instagram_sender.py  instagram_webhook.py  instagram_wsgi.py  models.py  observability.py  openclaw_client.py  operations.py  policy.py  queue.py  runtime.py  service.py  web.py  workspace.py  wsgi.py
rrpp_bridge/adapters/: gmail.py  instagram.py
rrpp_bridge/sql/: 003_gmail_connector.sql  004_operational_workspace.sql  005_backfill_action_reviews.sql  006_operational_health.sql  007_instagram_inbound.sql  008_openclaw_draft_provider.sql  009_conversation_catalog_delivery.sql
rrpp_bridge/static/: dashboard.css
scripts/: run-local.ps1
tests/: test_bridge.py  test_delivery.py  test_gmail.py  test_instagram.py  test_openclaw.py  test_operations.py
